# service-marketplace-app

./: tailwind.config.ts
Frontend/app/: layout.tsx
Frontend/app/categories/: page.tsx
Frontend/app/components/: navigation.tsx  service-categories.tsx
Frontend/app/customer/dashboard/: page.tsx
Frontend/app/role-selection/: page.tsx
app/: page.tsx
app/categories/[category]/: page.tsx
app/categories/all_categories/: page.tsx
app/categories/all_providers/: page.tsx
app/customer/home/: page.tsx
app/provider/dashboard/: page.tsx
app/signup/customer/: page.tsx
app/signup/customer/signin/: page.tsx
app/signup/provider/: page.tsx
backend/: .env  README.md  app.db  database.py  main.py  pyproject.toml  requirements.txt  schema.sql  schema_sqlite.sql
backend/app/: database.py  main.py
backend/modules/: utils.py
backend/modules/analytics/: models.py  routes.py  services.py
backend/modules/auth/: models.py  routes.py  services.py
backend/modules/booking/: models.py  routes.py  services.py
backend/modules/category/: models.py  routes.py  services.py
backend/modules/customer/: models.py  routes.py  services.py
backend/modules/location/: models.py  routes.py  services.py
backend/modules/notification/: models.py  routes.py  services.py
backend/modules/provider/: models.py  routes.py  services.py
backend/modules/providers/: models.py  routes.py  service.py
backend/modules/review/: models.py  routes.py  services.py
backend/modules/service/: models.py  routes.py  services.py
backend/modules/users/: models.py  routes.py  service.py
(+3 files in other folders)
