[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crypto>=1.4.1",
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pycryptodome>=3.23.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
